# BrowserAutomator

./: .gitignore  readme.md  scenario_description.md
browser_automator_extension/: README.md  content-script.js  manifest.json  service_worker.js
browser_automator_extension/popups/: popup.css  popup.html  popup.js
server/: .gitignore  README.md  action.py  browser_automator.py  classifier.py  document.py  example.py  extracting_elements_attributes.py  javascript_functions.py  keys.py  pyproject.toml  recording.py  replay.py  replay_actions.py  requirements.txt  transposition.py  utils.py
server/clfs/: google_classifier.json
server/suggested/: google_classifier.json
