[tool.poetry]
name = "masapi-browser-automator"
version = "0.1.0"
description = ""
authors = ["Efraim Berkovič <efraim@lingea.net>"]
readme = "README.md"
packages = [{include = "masapi_browser_automator"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
flask-cors = "^4.0.0"
numpy = "^1.25.2"
pandas = "^2.0.3"
selenium = "^4.11.2"
xgboost = "^1.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
